--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "fastify-qwik",
   "version": "0.1.0",
   "description": "Fastify plugin for Qwik City",
-  "main": "index.js",
+  "exports": {
+    "import": "./dist/index.mjs",
+    "require": "./dist/index.cjs"
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "unbuild",
+    "build": "tsup src/*.ts --format cjs,esm --dts --clean --minify",
     "test": "vitest",
     "lint": "eslint ./src --ext .ts",
     "prepare": "pnpm lint --fix && pnpm build"
   },
   "dependencies": {
+    "@builder.io/qwik-city": "^0.2.1",
     "fastify-plugin": "^4.5.0"
   },
   "devDependencies": {
@@ -21,9 +25,9 @@
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4",
+    "fastify": "^4.13.0",
+    "tsup": "^6.6.3",
     "typescript": "^4.9.5",
-    "unbuild": "^1.1.2",
     "vitest": "^0.28.5"
   },
   "keywords": [
