--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/*.ts --format cjs,esm --dts --clean --minify",
+    "build": "tsup",
     "test": "vitest",
     "lint": "eslint ./src --ext .ts",
     "prepare": "pnpm lint --fix && pnpm build"
@@ -21,8 +21,8 @@
     "fastify-plugin": "^4.5.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
